<resources>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="key">Keyword</string>

    <!--Doctor-->
    <string name="Name">Name :</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="special_in">Special In :</string>
    <string name="phone_no">Phone No :</string>
    <string name="address">Address :</string>
    <string name="ward_no">Ward No :</string>
    <string name="add">Add</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="add_doctors">Add Doctors</string>
    <string name="docter_s_list">Docter\'s List</string>
    <string name="doctor_managment">Doctor Managment</string>

    <!--Patient Home Pagee Strings -->
    <string name="ADDPATIENT">ADD PATIENT</string>
    <string name="VIEWPATIENTLIST">VIEW PATIENT LIST</string>
    <string name="Home">HOME</string>

    <!--add patient Strings -->
    <string name="app_name">Arogya Hospital</string>
    <string name="register">Register</string>
    <string name="pname"></string>
    <string name="page"></string>
    <string name="paddress"></string>
    <string name="pphone"></string>
    <string name="pdisease"></string>
    <string name="pgender"></string>
    <string name="pgurName"></string>
    <string name="PatientName">Patient Name :</string>
    <string name="Age">Age :</string>
    <string name="Address">Location :</string>
    <string name="ContactNumber">Contact Number:</string>
    <string name="Diseases">Diseases :</string>
    <string name="Gender">Gender :</string>
    <string name="GuardianName">Guardian Name:</string>

    <!--View Patients Strings -->
    <string name="PatientsList"> Patients List</string>A
    <string name="AddNewPatient"> Add New Patient</string>
    <string name="Back"> Back</string>

    <!-- Patients List Strings -->
    <string name="vAge">Name </string>
    <string name="vName">Age </string>
    <string name="vAddress">Location </string>
    <string name="vDisease">Disease </string>
    <string name="vContactNo">Contact No </string>
    <string name="vGender">Gender </string>
    <string name="vGuardianNo">Guardian Name </string>

    <!--Update patient Strings -->
    <string name="ePatientName">Patient Name: </string>
    <string name="eAge">Age : </string>
    <string name="eAddress">Location : </string>
    <string name="eContactNo">Contact No : </string>
    <string name="eDiseases">Diseases : </string>
    <string name="eGender">Gender : </string>
    <string name="eGuardianName">Guardian Name : </string>
    <string name="Namebox"> </string>
    <string name="Agebox"> </string>
    <string name="Addressbox"> </string>
    <string name="Phonebox"> </string>
    <string name="Disabox"> </string>
    <string name="Genderbox"> </string>
    <string name="Guardbox"> </string>
    <string name="UpdateDetails">Update Details </string>
    <string name="DELETEDetails">Delete Details </string>

   <!-- bhagya strings-->
    <string name="list">View Drug List</string>
    <string name="list2">Insert New Drugs</string>
    <string name="Insert_New_Drug">Insert New Drug</string>
    <string name="name_Text"></string>
    <string name="Manufacturer"></string>
    <string name="quantity_Text"></string>
    <string name="price_Text"></string>
    <string name="Price"></string>
    <string name="Name_Update"></string>
    <string name="manufacturer_Update"></string>
    <string name="quantity_Update"></string>
    <string name="price_Update"></string>
    <string name="description_Update"></string>
    <string name="Update_Drugs">Update Drugs</string>
    <string name="Update_Btn">Update</string>
    <string name="Delete_Btn">Delete</string>
    <string name="Insert_Btn">Insert</string>



    <!-- pradeep strings-->
    <string name="Enter_Department">Enter Department</string>
    <string name="Enter_Contact_No">Enter Contact No</string>
    <string name="Enter_Address">Enter Address</string>
    <string name="Enter_Gender">Enter Gender</string>
    <string name="Enter_Age">Enter Age</string>
    <string name="Enter_Name">Enter Name</string>
    <string name="STAFF_MEMBERS">STAFF MEMBERS</string>
    <string name="ADD_A_NEW_MEMBER">ADD A NEW MEMBER</string>
    <string name="name">Name</string>
    <string name="enter_Gender">Enter Gender</string>
    <string name="Contact_No">Contact No</string>
    <string name="department">Department</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DELETE">DELETE</string>
    <string name="vIEW_MEMBERS">VIEW MEMBERS</string>
    <string name="MEMBERS_LIST">MEMBERS LIST</string>
    <string name="update_doctor">update</string>
    <string name="demo">Demo</string>


</resources>
