<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/vName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#140202"
            android:textColorLink="#00090101"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/vAge"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textColorLink="#00090101"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/paddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/vAddress"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textColorLink="#00090101"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pdisease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/vDisease"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textColorLink="#00090101"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/vContactNo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/vGender"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pgurdian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/vGuardianNo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="20sp" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorAccent"/>

</LinearLayout>